# django-static-publisher

./: .gitignore  README.md  devenv.nix  pyproject.toml
django_static_publisher/: apps.py  patterns.py  publish.py
django_static_publisher/management/commands/: static_publish.py
examples/blog/articles/: admin.py  models.py  static_publish.py  urls.py  views.py
examples/blog/articles/migrations/: 0001_initial.py
examples/blog/articles/templates/articles/: article.html  index.html
examples/blog/blog/: settings.py  static_publish.py  urls.py  views.py
examples/blog/templates/blog/: index.html
examples/django-tutorial/mysite/: settings.py
examples/django-tutorial/polls/: admin.py  static_publish.py  views.py
examples/django-tutorial/polls/migrations/: 0001_initial.py
